4_dvwa/dvwa_apps 2.yaml
apiVersion: v1
kind: Service
metadata:
  name: dvwa
  namespace: dvwa
  labels:
    app: dvwa
    service: dvwa
spec:
  ports:
  - port: 80
    name: dvwa-80
    protocol: TCP
    name: http
  selector:
    app: dvwa

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dvwa
  namespace: dvwa
  labels:
    app: dvwa
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvwa
      version: v1
  template:
    metadata:
      labels:
        app: dvwa
        version: v1
    spec:
      containers:
      - env:
        - name: service_name
          value: dvwa
        image: aracloud/docker-dvwa:latest
        imagePullPolicy: IfNotPresent
        name: dvwa
        ports:
        - containerPort: 80
          protocol: TCP
