4_dvwa/ingress_dvwa.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dvwa-ingress
  namespace: dvwa
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - dvwa.gcp.f5demos.ch
    secretName: default-server-secret-dvwa
  rules:
  - host: dvwa.gcp.f5demos.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dvwa
            port:
              number: 80
